sfdxsrc/genericDataTable/objects/Data_Table__mdt/Data_Table__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to store the settings related to the generic data table.</description>
    <label>Data Table</label>
    <pluralLabel>Data Table</pluralLabel>
</CustomObject>