sfdxsrc/genericDataTable/objects/Data_Table__mdt/fields/Default_Fields__c.field-meta.xml
<CustomField>
    <fullName>Default_Fields__c</fullName>
    <description>Holds the field API name which we do not want to show on the table as columns but still want to query.</description>
    <inlineHelpText>Comma-separated field API name to query along with columns.</inlineHelpText>
    <label>Default Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>