sfdxsrc/genericDataTable/objects/Data_Table__mdt/fields/Default_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Page_Size__c</fullName>
    <description>Holds the default length of the table. i.e. the number of rows to be shown on each page.</description>
    <label>Default Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>