sfdxsrc/genericDataTable/objects/Data_Table__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Holds the API name of Object from where we need to pull the data.</description>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>