sfdxsrc/genericDataTable/objects/Data_Table__mdt/fields/Paging_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Paging_Picklist_Values__c</fullName>
    <description>Comma-separated value for paging picklist.i.e 10,20,30</description>
    <inlineHelpText>Comma-separated value for paging picklist.i.e 10,20,30</inlineHelpText>
    <label>Paging Picklist Values</label>
    <type>TextArea</type>
</CustomField>