sfdxsrc/genericDataTable/objects/Data_Table__mdt/fields/Show_Pagination__c.field-meta.xml
<CustomField>
    <fullName>Show_Pagination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if we want Pagination.</description>
    <label>Show Pagination</label>
    <type>Checkbox</type>
</CustomField>