sfdxsrc/genericDataTable/objects/Data_Table__mdt/fields/Show_Paging_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Show_Paging_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if we want Paging Picklist.</description>
    <label>Show Paging Picklist</label>
    <type>Checkbox</type>
</CustomField>