sfdxsrc/genericDataTable/objects/Data_Table__mdt/fields/Show_Search__c.field-meta.xml
<CustomField>
    <fullName>Show_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if we want to search.</description>
    <label>Show Search</label>
    <type>Checkbox</type>
</CustomField>