sfdxsrc/genericDataTable/objects/Data_Table__mdt/fields/Table_Key_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Key_Field_API_Name__c</fullName>
    <defaultValue>&quot;Id&quot;</defaultValue>
    <label>Table Key Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>